[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/GUI/close-btn-hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/GUI/Buttons/btn-defend-default.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Buttons/btn-attack-default.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/tutorial-panel.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/close-btn.png" type="Texture" id=5]
[ext_resource path="res://Assets/GUI/TownButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Fonts/intro_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Assets/GUI/Buttons/btn-defend-hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/Buttons/btn-defend-pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/Buttons/btn-defend-disabled.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/prev-disabled.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/next-btn-disabled.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/prev-btn.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/next-btn.png" type="Texture" id=14]
[ext_resource path="res://Assets/GUI/ActionButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/GUI/Tutorial.gd" type="Script" id=16]

[sub_resource type="Animation" id=1]
resource_name = "Activate"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("SkillSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.18, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "on_activated_animation"
}, {
"args": [  ],
"method": "on_stop_activate_animation"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fail"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SkillSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_stop_activate_animation"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SkillSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SkillSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Success"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SkillSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_stop_activate_animation"
} ]
}

[node name="Tutorial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="DismissButton" parent="." instance=ExtResource( 6 )]
margin_left = 113.0
margin_top = 5.0
margin_right = 123.0
margin_bottom = 15.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 1 )

[node name="NextButton" parent="." instance=ExtResource( 6 )]
margin_left = 113.0
margin_top = 77.0
margin_right = 123.0
margin_bottom = 87.0
texture_normal = ExtResource( 14 )
texture_disabled = ExtResource( 12 )

[node name="PrevButton" parent="." instance=ExtResource( 6 )]
margin_left = 102.0
margin_top = 77.0
margin_right = 112.0
margin_bottom = 87.0
disabled = true
texture_normal = ExtResource( 13 )
texture_disabled = ExtResource( 11 )

[node name="Tutorial-1" type="Control" parent="."]
margin_top = 19.0
margin_right = 128.0
margin_bottom = 75.0
mouse_filter = 2

[node name="InfoIntro3" type="Label" parent="Tutorial-1"]
margin_left = 6.0
margin_top = 32.0
margin_right = 122.0
margin_bottom = 45.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "You cannot do both at the"
valign = 1

[node name="InfoIntro4" type="Label" parent="Tutorial-1"]
margin_left = 6.0
margin_top = 41.0
margin_right = 122.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "same time, choose wisely!"
valign = 1

[node name="InfoIntro6" type="Label" parent="Tutorial-1"]
margin_left = 28.0
margin_right = 110.0
margin_bottom = 13.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Click to attack"
valign = 1

[node name="TextureRect" type="TextureRect" parent="Tutorial-1"]
margin_left = 6.0
margin_right = 22.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="InfoIntro7" type="Label" parent="Tutorial-1"]
margin_left = 28.0
margin_top = 17.0
margin_right = 120.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Click to defend / block"
valign = 1

[node name="TextureRect2" type="TextureRect" parent="Tutorial-1"]
margin_left = 6.0
margin_top = 17.0
margin_right = 22.0
margin_bottom = 33.0
texture = ExtResource( 2 )

[node name="Tutorial-2" type="Control" parent="."]
visible = false
margin_top = 19.0
margin_right = 128.0
margin_bottom = 75.0
mouse_filter = 2

[node name="InfoIntro3" type="Label" parent="Tutorial-2"]
margin_left = 7.0
margin_top = -2.0
margin_right = 123.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "To block an attack, you must"
valign = 1

[node name="InfoIntro4" type="Label" parent="Tutorial-2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "be precise with timing"
valign = 1

[node name="DefenseHintLabel" type="Label" parent="Tutorial-2"]
margin_left = 28.0
margin_top = 30.0
margin_right = 120.0
margin_bottom = 43.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Try it out!"
valign = 1

[node name="DefendButton" parent="Tutorial-2" instance=ExtResource( 15 )]
margin_left = 8.0
margin_top = 31.0
margin_right = 24.0
margin_bottom = 47.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 10 )

[node name="AnimationPlayer" parent="Tutorial-2/DefendButton" index="2"]
anims/Activate = SubResource( 1 )
anims/Fail = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Success = SubResource( 5 )

[node name="Tutorial-3" type="Control" parent="."]
visible = false
margin_top = 19.0
margin_right = 128.0
margin_bottom = 75.0
mouse_filter = 2

[node name="InfoIntro3" type="Label" parent="Tutorial-3"]
margin_left = 6.0
margin_top = 2.0
margin_right = 122.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Each enemy has a different"
valign = 1

[node name="InfoIntro4" type="Label" parent="Tutorial-3"]
margin_left = 6.0
margin_top = 11.0
margin_right = 122.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "attack / defense strategy. "
valign = 1

[node name="InfoIntro5" type="Label" parent="Tutorial-3"]
margin_left = 6.0
margin_top = 25.0
margin_right = 122.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Learning them will help you"
valign = 1

[node name="InfoIntro6" type="Label" parent="Tutorial-3"]
margin_left = 6.0
margin_top = 34.0
margin_right = 122.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.917647, 0.917647, 0.917647, 1 )
custom_fonts/font = ExtResource( 7 )
text = "win battles!"
valign = 1

[node name="Title" type="Label" parent="."]
margin_left = 7.0
margin_top = 3.0
margin_right = 54.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 31, 7 )
custom_colors/font_color = Color( 0.831373, 0.87451, 0.0862745, 1 )
custom_fonts/font = ExtResource( 7 )
text = "How to play"
valign = 1

[node name="TutorialTimer" type="Timer" parent="."]

[editable path="Tutorial-2/DefendButton"]
[editable path="Tutorial-2/DefendButton/ProgressBar"]
